--- a/MainWindow.xib
+++ b/MainWindow.xib
@@ -10,7 +10,9 @@
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			<string key="NS.object.0">117</string>
 		</object>
-		<array class="NSMutableArray" key="IBDocument.EditedObjectIDs"/>
+		<array class="NSMutableArray" key="IBDocument.EditedObjectIDs">
+			<integer value="59"/>
+		</array>
 		<array key="IBDocument.PluginDependencies">
 			<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 		</array>
@@ -75,9 +77,10 @@
 					<array class="NSMutableArray" key="IBUIViewControllers">
 						<object class="IBUITableViewController" id="616303746">
 							<object class="IBUITableView" key="IBUIView" id="777956031">
-								<nil key="NSNextResponder"/>
+								<reference key="NSNextResponder"/>
 								<int key="NSvFlags">274</int>
 								<string key="NSFrameSize">{320, 704}</string>
+								<reference key="NSSuperview"/>
 								<object class="NSColor" key="IBUIBackgroundColor" id="71800354">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MQA</bytes>
@@ -93,6 +96,7 @@
 								<float key="IBUISectionFooterHeight">22</float>
 							</object>
 							<object class="IBUINavigationItem" key="IBUINavigationItem" id="829119347">
+								<reference key="IBUINavigationBar"/>
 								<string key="IBUITitle">Stores with Corona</string>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 							</object>
@@ -110,87 +114,104 @@
 					</array>
 				</object>
 				<object class="IBUIViewController" key="IBUIDetailViewController" id="23693665">
-					<object class="IBUIView" key="IBUIView" id="172959080">
-						<nil key="NSNextResponder"/>
+					<object class="IBUIView" key="IBUIView" id="174630419">
+						<reference key="NSNextResponder"/>
 						<int key="NSvFlags">274</int>
 						<array class="NSMutableArray" key="NSSubviews">
-							<object class="IBUILabel" id="864063755">
-								<reference key="NSNextResponder" ref="172959080"/>
-								<int key="NSvFlags">298</int>
-								<string key="NSFrame">{{84, 84}, {460, 63}}</string>
-								<reference key="NSSuperview" ref="172959080"/>
+							<object class="IBUIView" id="172959080">
+								<reference key="NSNextResponder" ref="174630419"/>
+								<int key="NSvFlags">274</int>
+								<array class="NSMutableArray" key="NSSubviews">
+									<object class="IBUILabel" id="864063755">
+										<reference key="NSNextResponder" ref="172959080"/>
+										<int key="NSvFlags">298</int>
+										<string key="NSFrame">{{71, 102}, {395, 63}}</string>
+										<reference key="NSSuperview" ref="172959080"/>
+										<reference key="IBUIBackgroundColor" ref="71800354"/>
+										<bool key="IBUIClipsSubviews">YES</bool>
+										<bool key="IBUIUserInteractionEnabled">NO</bool>
+										<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+										<string key="IBUIText">Out of Beer &amp; Ribs are On!</string>
+										<object class="NSFont" key="IBUIFont">
+											<string key="NSName">Helvetica</string>
+											<double key="NSSize">36</double>
+											<int key="NSfFlags">16</int>
+										</object>
+										<object class="NSColor" key="IBUITextColor">
+											<int key="NSColorSpace">1</int>
+											<bytes key="NSRGB">MCAwIDAAA</bytes>
+										</object>
+										<nil key="IBUIHighlightedColor"/>
+										<int key="IBUIBaselineAdjustment">1</int>
+										<float key="IBUIMinimumFontSize">10</float>
+									</object>
+									<object class="IBUIToolbar" id="411186180">
+										<reference key="NSNextResponder" ref="172959080"/>
+										<int key="NSvFlags">290</int>
+										<string key="NSFrameSize">{703, 44}</string>
+										<reference key="NSSuperview" ref="172959080"/>
+										<bool key="IBUIOpaque">NO</bool>
+										<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
+										<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+										<array class="NSMutableArray" key="IBUIItems"/>
+									</object>
+									<object class="IBMKMapView" id="405303952">
+										<reference key="NSNextResponder" ref="172959080"/>
+										<int key="NSvFlags">256</int>
+										<string key="NSFrame">{{1, 179}, {700, 507}}</string>
+										<reference key="NSSuperview" ref="172959080"/>
+										<bool key="IBUIClipsSubviews">YES</bool>
+										<int key="IBUIContentMode">4</int>
+										<bool key="IBUIMultipleTouchEnabled">YES</bool>
+										<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+									</object>
+									<object class="IBUIButton" id="24162509">
+										<reference key="NSNextResponder" ref="172959080"/>
+										<int key="NSvFlags">-2147483356</int>
+										<string key="NSFrame">{{494, 53}, {137, 100}}</string>
+										<reference key="NSSuperview" ref="172959080"/>
+										<bool key="IBUIOpaque">NO</bool>
+										<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+										<int key="IBUIContentHorizontalAlignment">0</int>
+										<int key="IBUIContentVerticalAlignment">0</int>
+										<object class="NSFont" key="IBUIFont">
+											<string key="NSName">Helvetica-Bold</string>
+											<double key="NSSize">15</double>
+											<int key="NSfFlags">16</int>
+										</object>
+										<reference key="IBUIHighlightedTitleColor" ref="71800354"/>
+										<object class="NSColor" key="IBUINormalTitleColor">
+											<int key="NSColorSpace">1</int>
+											<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
+										</object>
+										<object class="NSColor" key="IBUINormalTitleShadowColor">
+											<int key="NSColorSpace">3</int>
+											<bytes key="NSWhite">MC41AA</bytes>
+										</object>
+										<object class="NSCustomResource" key="IBUINormalBackgroundImage">
+											<string key="NSClassName">NSImage</string>
+											<string key="NSResourceName">10.png</string>
+										</object>
+									</object>
+								</array>
+								<string key="NSFrameSize">{703, 1004}</string>
+								<reference key="NSSuperview" ref="174630419"/>
 								<reference key="IBUIBackgroundColor" ref="71800354"/>
-								<bool key="IBUIClipsSubviews">YES</bool>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-								<string key="IBUIText">Out of Beer &amp; Ribs are On!</string>
-								<object class="NSFont" key="IBUIFont">
-									<string key="NSName">Helvetica</string>
-									<double key="NSSize">36</double>
-									<int key="NSfFlags">16</int>
-								</object>
-								<object class="NSColor" key="IBUITextColor">
-									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MCAwIDAAA</bytes>
-								</object>
-								<nil key="IBUIHighlightedColor"/>
-								<int key="IBUIBaselineAdjustment">1</int>
-								<float key="IBUIMinimumFontSize">10</float>
-							</object>
-							<object class="IBUIToolbar" id="411186180">
-								<reference key="NSNextResponder" ref="172959080"/>
-								<int key="NSvFlags">290</int>
-								<string key="NSFrameSize">{768, 44}</string>
-								<reference key="NSSuperview" ref="172959080"/>
-								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
+								<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics">
+									<int key="IBUIStatusBarStyle">2</int>
+								</object>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-								<array class="NSMutableArray" key="IBUIItems"/>
-							</object>
-							<object class="IBMKMapView" id="405303952">
-								<reference key="NSNextResponder" ref="172959080"/>
-								<int key="NSvFlags">256</int>
-								<string key="NSFrame">{{84, 179}, {600, 507}}</string>
-								<reference key="NSSuperview" ref="172959080"/>
-								<bool key="IBUIClipsSubviews">YES</bool>
-								<int key="IBUIContentMode">4</int>
-								<bool key="IBUIMultipleTouchEnabled">YES</bool>
-								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-							</object>
-							<object class="IBUIButton" id="24162509">
-								<reference key="NSNextResponder" ref="172959080"/>
-								<int key="NSvFlags">-2147483356</int>
-								<string key="NSFrame">{{547, 52}, {137, 100}}</string>
-								<reference key="NSSuperview" ref="172959080"/>
-								<bool key="IBUIOpaque">NO</bool>
-								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-								<int key="IBUIContentHorizontalAlignment">0</int>
-								<int key="IBUIContentVerticalAlignment">0</int>
-								<object class="NSFont" key="IBUIFont">
-									<string key="NSName">Helvetica-Bold</string>
-									<double key="NSSize">15</double>
-									<int key="NSfFlags">16</int>
-								</object>
-								<reference key="IBUIHighlightedTitleColor" ref="71800354"/>
-								<object class="NSColor" key="IBUINormalTitleColor">
-									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
-								</object>
-								<object class="NSColor" key="IBUINormalTitleShadowColor">
-									<int key="NSColorSpace">3</int>
-									<bytes key="NSWhite">MC41AA</bytes>
-								</object>
-								<object class="NSCustomResource" key="IBUINormalBackgroundImage">
-									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">10.png</string>
-								</object>
 							</object>
 						</array>
-						<string key="NSFrame">{{-33, 0}, {768, 748}}</string>
-						<reference key="IBUIBackgroundColor" ref="71800354"/>
-						<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
-						<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics">
-							<int key="IBUIStatusBarStyle">2</int>
+						<string key="NSFrameSize">{703, 748}</string>
+						<reference key="NSSuperview"/>
+						<object class="NSColor" key="IBUIBackgroundColor">
+							<int key="NSColorSpace">3</int>
+							<bytes key="NSWhite">MQA</bytes>
+							<object class="NSColorSpace" key="NSCustomColorSpace">
+								<int key="NSID">2</int>
+							</object>
 						</object>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 					</object>
@@ -287,15 +308,6 @@
 					<int key="connectionID">65</int>
 				</object>
 				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchEventConnection" key="connection">
-						<string key="label">tweet</string>
-						<reference key="source" ref="24162509"/>
-						<reference key="destination" ref="23693665"/>
-						<int key="IBEventType">7</int>
-					</object>
-					<int key="connectionID">67</int>
-				</object>
-				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">twitterButton</string>
 						<reference key="source" ref="23693665"/>
@@ -310,6 +322,15 @@
 						<reference key="destination" ref="405303952"/>
 					</object>
 					<int key="connectionID">70</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">tweet</string>
+						<reference key="source" ref="24162509"/>
+						<reference key="destination" ref="23693665"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">71</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -363,7 +384,7 @@
 						<int key="objectID">39</int>
 						<reference key="object" ref="23693665"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="172959080"/>
+							<reference ref="174630419"/>
 						</array>
 						<reference key="parent" ref="1001026670"/>
 					</object>
@@ -392,6 +413,14 @@
 						<reference key="parent" ref="616303746"/>
 					</object>
 					<object class="IBObjectRecord">
+						<int key="objectID">72</int>
+						<reference key="object" ref="174630419"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="172959080"/>
+						</array>
+						<reference key="parent" ref="23693665"/>
+					</object>
+					<object class="IBObjectRecord">
 						<int key="objectID">59</int>
 						<reference key="object" ref="172959080"/>
 						<array class="NSMutableArray" key="children">
@@ -400,7 +429,7 @@
 							<reference ref="24162509"/>
 							<reference ref="864063755"/>
 						</array>
-						<reference key="parent" ref="23693665"/>
+						<reference key="parent" ref="174630419"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">63</int>
@@ -413,13 +442,13 @@
 						<reference key="parent" ref="172959080"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">61</int>
-						<reference key="object" ref="864063755"/>
+						<int key="objectID">60</int>
+						<reference key="object" ref="24162509"/>
 						<reference key="parent" ref="172959080"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">60</int>
-						<reference key="object" ref="24162509"/>
+						<int key="objectID">61</int>
+						<reference key="object" ref="864063755"/>
 						<reference key="parent" ref="172959080"/>
 					</object>
 				</array>
@@ -431,7 +460,7 @@
 				<string key="2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="3.CustomClassName">dcgAppDelegate</string>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="37.IBEditorWindowLastContentRect">{{26, 73}, {1024, 768}}</string>
+				<string key="37.IBEditorWindowLastContentRect">{{36, 88}, {1024, 768}}</string>
 				<string key="37.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="38.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="39.CustomClassName">DetailViewController</string>
@@ -440,18 +469,19 @@
 				<string key="50.CustomClassName">StoresTableViewController</string>
 				<string key="50.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="51.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="59.IBEditorWindowLastContentRect">{{317, 0}, {783, 856}}</string>
+				<string key="59.IBEditorWindowLastContentRect">{{561, 0}, {705, 856}}</string>
 				<string key="59.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="60.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="61.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="62.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="63.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="72.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">70</int>
+			<int key="maxID">72</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
