--- a/MainWindow.xib
+++ b/MainWindow.xib
@@ -10,7 +10,9 @@
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			<string key="NS.object.0">117</string>
 		</object>
-		<array class="NSMutableArray" key="IBDocument.EditedObjectIDs"/>
+		<array class="NSMutableArray" key="IBDocument.EditedObjectIDs">
+			<integer value="59"/>
+		</array>
 		<array key="IBDocument.PluginDependencies">
 			<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 		</array>
@@ -75,9 +77,10 @@
 					<array class="NSMutableArray" key="IBUIViewControllers">
 						<object class="IBUITableViewController" id="616303746">
 							<object class="IBUITableView" key="IBUIView" id="777956031">
-								<nil key="NSNextResponder"/>
+								<reference key="NSNextResponder"/>
 								<int key="NSvFlags">274</int>
 								<string key="NSFrameSize">{320, 704}</string>
+								<reference key="NSSuperview"/>
 								<object class="NSColor" key="IBUIBackgroundColor" id="71800354">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MQA</bytes>
@@ -93,6 +96,7 @@
 								<float key="IBUISectionFooterHeight">22</float>
 							</object>
 							<object class="IBUINavigationItem" key="IBUINavigationItem" id="829119347">
+								<reference key="IBUINavigationBar"/>
 								<string key="IBUITitle">Stores with Corona</string>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 							</object>
@@ -111,7 +115,7 @@
 				</object>
 				<object class="IBUIViewController" key="IBUIDetailViewController" id="23693665">
 					<object class="IBUIView" key="IBUIView" id="174630419">
-						<nil key="NSNextResponder"/>
+						<reference key="NSNextResponder"/>
 						<int key="NSvFlags">274</int>
 						<array class="NSMutableArray" key="NSSubviews">
 							<object class="IBUIView" id="172959080">
@@ -121,7 +125,7 @@
 									<object class="IBUILabel" id="864063755">
 										<reference key="NSNextResponder" ref="172959080"/>
 										<int key="NSvFlags">298</int>
-										<string key="NSFrame">{{71, 102}, {395, 63}}</string>
+										<string key="NSFrame">{{28, 71}, {493, 63}}</string>
 										<reference key="NSSuperview" ref="172959080"/>
 										<reference key="IBUIBackgroundColor" ref="71800354"/>
 										<bool key="IBUIClipsSubviews">YES</bool>
@@ -130,21 +134,21 @@
 										<string key="IBUIText">Out of Beer &amp; Ribs are On!</string>
 										<object class="NSFont" key="IBUIFont">
 											<string key="NSName">Helvetica</string>
-											<double key="NSSize">36</double>
+											<double key="NSSize">42</double>
 											<int key="NSfFlags">16</int>
 										</object>
-										<object class="NSColor" key="IBUITextColor">
+										<object class="NSColor" key="IBUITextColor" id="920272672">
 											<int key="NSColorSpace">1</int>
 											<bytes key="NSRGB">MCAwIDAAA</bytes>
 										</object>
 										<nil key="IBUIHighlightedColor"/>
 										<int key="IBUIBaselineAdjustment">1</int>
-										<float key="IBUIMinimumFontSize">10</float>
+										<float key="IBUIMinimumFontSize">38</float>
 									</object>
 									<object class="IBMKMapView" id="405303952">
 										<reference key="NSNextResponder" ref="172959080"/>
 										<int key="NSvFlags">256</int>
-										<string key="NSFrame">{{1, 179}, {700, 507}}</string>
+										<string key="NSFrame">{{1, 162}, {700, 507}}</string>
 										<reference key="NSSuperview" ref="172959080"/>
 										<bool key="IBUIClipsSubviews">YES</bool>
 										<int key="IBUIContentMode">4</int>
@@ -154,7 +158,7 @@
 									<object class="IBUIButton" id="24162509">
 										<reference key="NSNextResponder" ref="172959080"/>
 										<int key="NSvFlags">-2147483356</int>
-										<string key="NSFrame">{{494, 53}, {137, 100}}</string>
+										<string key="NSFrame">{{534, 44}, {137, 100}}</string>
 										<reference key="NSSuperview" ref="172959080"/>
 										<bool key="IBUIOpaque">NO</bool>
 										<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -179,6 +183,48 @@
 											<string key="NSResourceName">10.png</string>
 										</object>
 									</object>
+									<object class="IBUILabel" id="673794396">
+										<reference key="NSNextResponder" ref="172959080"/>
+										<int key="NSvFlags">292</int>
+										<string key="NSFrame">{{538, 6}, {145, 38}}</string>
+										<reference key="NSSuperview" ref="172959080"/>
+										<bool key="IBUIOpaque">NO</bool>
+										<bool key="IBUIClipsSubviews">YES</bool>
+										<int key="IBUIContentMode">7</int>
+										<bool key="IBUIUserInteractionEnabled">NO</bool>
+										<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+										<string key="IBUIText">@iBBQApp</string>
+										<object class="NSFont" key="IBUIFont">
+											<string key="NSName">Helvetica</string>
+											<double key="NSSize">26</double>
+											<int key="NSfFlags">16</int>
+										</object>
+										<reference key="IBUITextColor" ref="920272672"/>
+										<nil key="IBUIHighlightedColor"/>
+										<int key="IBUIBaselineAdjustment">1</int>
+										<float key="IBUIMinimumFontSize">26</float>
+									</object>
+									<object class="IBUILabel" id="122135461">
+										<reference key="NSNextResponder" ref="172959080"/>
+										<int key="NSvFlags">292</int>
+										<string key="NSFrame">{{20, 688}, {663, 40}}</string>
+										<reference key="NSSuperview" ref="172959080"/>
+										<bool key="IBUIOpaque">NO</bool>
+										<bool key="IBUIClipsSubviews">YES</bool>
+										<int key="IBUIContentMode">7</int>
+										<bool key="IBUIUserInteractionEnabled">NO</bool>
+										<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+										<string key="IBUIText">https://github.com/monolithinteractive/ibbq_dcg</string>
+										<object class="NSFont" key="IBUIFont">
+											<string key="NSName">Helvetica</string>
+											<double key="NSSize">32</double>
+											<int key="NSfFlags">16</int>
+										</object>
+										<reference key="IBUITextColor" ref="920272672"/>
+										<nil key="IBUIHighlightedColor"/>
+										<int key="IBUIBaselineAdjustment">1</int>
+										<float key="IBUIMinimumFontSize">29</float>
+									</object>
 								</array>
 								<string key="NSFrameSize">{703, 1004}</string>
 								<reference key="NSSuperview" ref="174630419"/>
@@ -191,6 +237,7 @@
 							</object>
 						</array>
 						<string key="NSFrameSize">{703, 748}</string>
+						<reference key="NSSuperview"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MQA</bytes>
@@ -420,6 +467,8 @@
 							<reference ref="405303952"/>
 							<reference ref="24162509"/>
 							<reference ref="864063755"/>
+							<reference ref="122135461"/>
+							<reference ref="673794396"/>
 						</array>
 						<reference key="parent" ref="174630419"/>
 					</object>
@@ -436,6 +485,16 @@
 					<object class="IBObjectRecord">
 						<int key="objectID">61</int>
 						<reference key="object" ref="864063755"/>
+						<reference key="parent" ref="172959080"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">83</int>
+						<reference key="object" ref="673794396"/>
+						<reference key="parent" ref="172959080"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">84</int>
+						<reference key="object" ref="122135461"/>
 						<reference key="parent" ref="172959080"/>
 					</object>
 				</array>
@@ -462,12 +521,14 @@
 				<string key="61.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="62.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="72.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="83.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="84.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">82</int>
+			<int key="maxID">84</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
